--- a/TimeTrackingWebApp/package.json
+++ b/TimeTrackingWebApp/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://M-Adeel-Hussain.github.io/final-year-project",
   "name": "org-emp-panel",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.4.7",
